<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <GVL Name="GVL_AlarmList" Id="{018857c1-8d2e-4ce4-acfa-044632231b12}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
    aiAlarmCode    : ARRAY[1..cMaxStationAlarmNo] OF INT;
    asLocation     : ARRAY[1..cMaxStationAlarmNo] OF STRING(50);
    asAlarmMessage : ARRAY[1..cMaxStationAlarmNo] OF STRING(255);
    iAlarmCount    : INT := 0; // number of alarms loaded
END_VAR
]]></Declaration>
  </GVL>
</TcPlcObject>
